<resources>
    <string name="app_name">ProjectZero</string>

    <string name="action_settings">Settings</string>

    <string name="streamer_button">SPOTIFY STREAMER</string>
    <string name="streamer_toast">Coming Soon: Spotify Streamer</string>
    <string name="duo_scores_button">Super Duo\nScores</string>
    <string name="duo_scores_toast">Coming Soon: Super Duo Scores</string>
    <string name="duo_library_button">Super Duo\nLibrary</string>
    <string name="duo_library_toast">Coming Soon: Super Duo Library</string>
    <string name="build_bigger_button">Build It Bigger</string>
    <string name="build_bigger_toast">Coming Soon: Build It Bigger</string>
    <string name="reader_button">XYZ Reader</string>
    <string name="reader_toast">Coming Soon: XYZ Reader</string>
    <string name="capstone_button">Capstone</string>
    <string name="capstone_toast">Coming Soon: Capstone</string>
    
    <string name="android_skateboard_image">Android Skateboard</string>
</resources>
